Adiciona classificacao do clube

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,2 +1,2 @@
+<app-classificacao [classificacao]="classificacao"></app-classificacao>
 <app-partidas-list [partidas]="partidas"></app-partidas-list>
-
