--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,6 +20,6 @@
 
 <footer class="site-footer">
   <div class="container">
-    <p>&copy; 2025 Clube de Malha Itajubá. Todos os direitos reservados.</p>
+    <p>&copy; 2025 Clube de Malha Itajubá.<br />Todos os direitos reservados.</p>
   </div>
 </footer>
