--- a/src/app/components/partidas-list/partidas-list.component.html
+++ b/src/app/components/partidas-list/partidas-list.component.html
@@ -1,6 +1,6 @@
 <section class="grid-duas-colunas">
   <div class="coluna">
-    <h2>Resultados Recentes</h2>
+    <h2>Últimos Resultados</h2>
     <app-partida-card
       *ngFor="let p of partidasEncerradas"
       [partida]="p"
