Fix display date

--- a/src/app/components/partida-card/partida-card.component.html
+++ b/src/app/components/partida-card/partida-card.component.html
@@ -1,6 +1,6 @@
 <div class="partida-card">
   <div class="info">
-    <strong>{{ partida.data | date : "shortDate" }}</strong> –
+    <strong>{{ partida.dataFormatada }}</strong> –
     {{ partida.local }}
   </div>
 
