--- a/src/app/components/partida-card/partida-card.component.html
+++ b/src/app/components/partida-card/partida-card.component.html
@@ -18,6 +18,9 @@
   </ng-container>
 
   <ng-template #agendada>
+    <div class="proximos">
+      {{ partida.clubeMandante }} x {{ partida.clubeVisitante }}
+    </div>
     <div class="status">⏳ Partida agendada</div>
   </ng-template>
 </div>
