--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,4 @@
-<header class="site-header">
-  <div class="container header-inner">
-    <a href="/" class="brand">
-      <img src="escudo.png" alt="Escudo do CMI">
-      <h1 class="site-title">CMI</h1>
-    </a>
-    <nav class="site-nav">
-      <a routerLink="/" routerLinkActive="active">Início</a>
-      <a routerLink="/sobre" routerLinkActive="active">Sobre</a>
-      <a routerLink="/contato" routerLinkActive="active">Contato</a>
-    </nav>
-  </div>
-</header>
+<app-header />
 
 <main class="site-main">
   <div class="container">
