Adiciona a pagina sobre

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <header class="site-header">
   <div class="container header-inner">
-    <a routerLink="#" class="brand">
+    <a routerLink="/" class="brand">
       <img src="escudo.png" alt="Escudo do CMI" />
       <h1 class="site-title">CMI</h1>
     </a>
