--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,8 +6,4 @@
   </div>
 </main>
 
-<footer class="site-footer">
-  <div class="container">
-    <p>&copy; 2025 Clube de Malha Itajubá.<br />Todos os direitos reservados.</p>
-  </div>
-</footer>
+<app-footer></app-footer>
