Ajusta mensagem do link

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -9,7 +9,7 @@
         target="_blank"
         rel="noopener"
       >
-        Código-fonte no GitHub
+        Código-fonte
       </a>
     </p>
   </div>
