--- a/src/app/components/jogo-rodada-card/jogo-rodada-card.component.html
+++ b/src/app/components/jogo-rodada-card/jogo-rodada-card.component.html
@@ -1,8 +1,10 @@
 <div class="partida-card">
   <div class="info">
     📍 <strong>{{ jogo.local }}</strong>
+    <div class="endereco" *ngIf="endereco">
+      {{ endereco }}
+    </div>
   </div>
-
   <ng-container *ngIf="jogo.pontosMandante != null && jogo.pontosVisitante != null; else agendada">
     <div class="resultado">
       {{ jogo.mandante }} {{ jogo.pontosMandante }} x {{ jogo.pontosVisitante }} {{ jogo.visitante }}
