Adicionando o saldo tecnico

--- a/src/app/components/classificacao/classificacao.component.html
+++ b/src/app/components/classificacao/classificacao.component.html
@@ -6,8 +6,7 @@
         <th>#</th>
         <th>Clube</th>
         <th>Pts</th>
-        <th>Vitórias</th>
-        <th>Derrotas</th>
+        <th>Saldo Técnico</th>
       </tr>
     </thead>
     <tbody>
@@ -15,8 +14,7 @@
         <td>{{ i + 1 }}</td>
         <td>{{ c.nome }}</td>
         <td>{{ c.pontos }}</td>
-        <td>{{ c.vitorias }}</td>
-        <td>{{ c.derrotas }}</td>
+        <td>{{ c.saldoTecnico }}</td>
       </tr>
     </tbody>
   </table>
