--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -10,4 +10,5 @@
       <a routerLink="/contato" routerLinkActive="active">Contato</a>
     </nav>
   </div>
+  <p class="site-slogan">Malha é o esporte que faz amizades</p>
 </header>
