--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
 <header class="site-header">
   <div class="container header-inner">
     <a routerLink="/" class="brand">
-      <img src="escudo.png" alt="Escudo do CMI" />
+      <img src="assets/escudo.png" alt="Escudo do CMI" />
       <h1 class="site-title">CMI</h1>
     </a>
     <nav class="site-nav">
