--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -5,13 +5,7 @@
   background-color: #f9f9f9;
   color: #333;
 }
-
-/* Conteúdo principal */
-.site-main {
-  padding-top: 1rem;
-  flex: 1;
-}
-
+/* Tela de carregamento */
 #splash-screen {
   opacity: 1;
   display: flex;
@@ -21,3 +15,17 @@
 #splash-screen.fade-out {
   opacity: 0;
 }
+
+/* Conteúdo principal */
+.site-main {
+  padding-top: 1rem;
+  flex: 1;
+}
+
+.container {
+  max-width: 960px;
+  margin: 0 auto;
+  padding: 1rem 1rem 2rem;
+}
+
+
