--- a/src/app/pages/contatct/contact.page.css
+++ b/src/app/pages/contatct/contact.page.css
@@ -1,7 +1,5 @@
-.container {
-  max-width: 960px;
-  margin: 1rem auto;
-  padding: 1.5rem 1rem 2rem;
+.pagina-cartao {
+  padding: 2rem;
   background: #fff;
   border: 1px solid #ddd;
   border-radius: 12px;
