--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,11 +1,4 @@
-<ng-container *ngIf="preloadFinalizado$ | async as pronto; else carregando">
-  <ng-container *ngIf="pronto">
-    {{ onPreloadFinalizado() }}
-    <app-classificacao [classificacao]="classificacao"></app-classificacao>
-    <app-partidas-list [partidas]="partidas" [rodadas]="rodadas" />
-  </ng-container>
+<ng-container *ngIf="preloadFinalizado$ | async">
+  <app-classificacao [classificacao]="classificacao"></app-classificacao>
+  <app-partidas-list [partidas]="partidas" [rodadas]="rodadas" />
 </ng-container>
-
-<ng-template #carregando>
-  <p>⏳ Carregando dados...</p>
-</ng-template>
